Added deployment configuration

--- a/Kubernetes/config-map.yaml
+++ b/Kubernetes/config-map.yaml
@@ -10,5 +10,5 @@ data:
   oracle-driver: oracle.jdbc.driver.OracleDriver
   user-name: SYSTEM
   password: dudkrish1A
-  show-sql: true
-  format-sql: true
+  show-sql: Yes
+  format-sql: Yes
