Added deployment configuration

--- a/Kubernetes/config-map.yaml
+++ b/Kubernetes/config-map.yaml
@@ -8,5 +8,5 @@ data:
   application-name: spring-rest-oracle-k8s
   oracle-url: jdbc:oracle:thin:@192.168.1.200:1521:cdb1
   oracle-driver: oracle.jdbc.driver.OracleDriver
-  user-name: SYSTEM
-  password: dudkrish1A
+  oracle-user-name: SYSTEM
+  oracle-password: dudkrish1A
