--- a/build.gradle
+++ b/build.gradle
@@ -32,11 +32,23 @@ dependencies {
     //implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
     // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation group: 'com.google.guava', name: 'guava', version: 'r05'
+    implementation group: 'io.springfox', name: 'springfox-swagger2', version: '2.7.0'
+    implementation group: 'io.springfox', name: 'springfox-swagger-ui', version: '2.7.0'
+    // https://mvnrepository.com/artifact/org.modelmapper/modelmapper
+    implementation group: 'org.modelmapper', name: 'modelmapper', version: '0.7.5'
+    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
+    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '4.0.0'
+    //implementation files('E:/Softwares/JarFiles/ojdbc8.jar')
+    implementation group: 'com.opencsv', name: 'opencsv', version: '5.2'
+    implementation 'org.apache.commons:commons-csv:1.8'
+    implementation group: 'com.itextpdf', name: 'itextpdf', version: '5.0.6'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.oracle.database.jdbc:ojdbc8'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
+
 }
 
 dependencyManagement {
